fixed brusher and bar chart layout issue

--- a/style.css
+++ b/style.css
@@ -73,10 +73,10 @@ div
 	border-width: 1px;
 }
 
-#barChart_box,#brusher_box
+#barChart
 {
 	width: 1200px;
-	height:400px;
+	height: 2000px;
 }
 
 #selectionBox
